--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -6,7 +6,11 @@
   <div class="form-group">
     <%= f.label :version, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-5">
-      <%= f.text_field :version, :class => 'form-control', readonly: true %>
+      <% if @asset.new_record? %>
+        <%= f.text_field :version, :class => 'form-control' %>
+      <% else %>
+        <%= f.text_field :version, :class => 'form-control', readonly: true %>
+      <% end %>
     </div>
   </div>
   <div class="form-group">
