--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -23,20 +23,12 @@
 <% end %>
 
 <% unless @machine.new_record? %>
-    <select id="country" onchange="changeUrl();">
-      <option selected value="">Choose Your Country</option>
-      <option value="india">India</option>
-      <option value="united states">United States</option>
-      <option value="united kingdom">United Kingdom</option>
-      <option value="canada">Canada</option>
-      <option value="france">France</option>
-      <option value="germany">Germany</option>
-      <option value="china">China</option>
-      <option value="japan">Japan</option>
-      <option value="korea">Korea</option>
-      <option value="uae">UAE</option>
-      <option value="world_wide">World Wide</option>
-    </select>
+    <div class="from-group">
+      <%= label_tag 'Filter By Country', nil, :class => 'col-sm-2 control-label' %>
+      <div class="col-sm-8">
+        <%= select_tag :country, options_for_select(COUNTRIES), :class => "form-control" %>
+      </div>
+    </div>
   
   <div class="col-md-3">
     <legend>Main Game Math Models</legend>
