--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
           </ul>
         <% else %>
-          <li><%= link_to "Sign In", new_user_session_path %></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Sign In", new_user_session_path %></li>
+          </ul>
         <% end %>
       </div>
       
