--- a/app/views/tournaments/index.html.slim
+++ b/app/views/tournaments/index.html.slim
@@ -5,6 +5,7 @@ table class="table table-striped"
   thead
     tr
       th= model_class.human_attribute_name(:id)
+      th= model_class.human_attribute_name(:machine_id)
       th= model_class.human_attribute_name(:min_entry_level)
       th= model_class.human_attribute_name(:max_entry_level)
       th= model_class.human_attribute_name(:seed_money)
@@ -15,6 +16,7 @@ table class="table table-striped"
     - @tournaments.each do |tournament|
       tr
         td= link_to tournament.id, tournament_path(tournament)
+        td= tournament.machine_id
         td= tournament.min_entry_level
         td= tournament.max_entry_level
         td= tournament.seed_money
